--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li class="cards__item">
               <img
               class="cards__image"
-              alt="Два вида внимания"
+              alt="Типы внимания"
               src="./images/cards-attention.png"
             />
               <h4 class="cards__title">Два вида внимания</h4>
@@ -67,7 +67,7 @@
             <li class="cards__item">
               <img
               class="cards__image"
-              alt="Recall"
+              alt="Вспомнить все"
               src="./images/cards-recall.png"
             />
               <h4 class="cards__title">Recall</h4>
