--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
               alt="Типы внимания"
               src="./images/cards-attention.png"
             />
-              <h4 class="cards__title">Два вида внимания</h4>
+              <h3 class="cards__title">Два вида внимания</h3>
               <p class="cards__description">
                 Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
             </li>
             <li class="cards__item">
               <img
               class="cards__image"
-              alt="Вспомнить все"
+              alt="Вспоминайте изученное"
               src="./images/cards-recall.png"
             />
-              <h4 class="cards__title">Recall</h4>
+              <h3 class="cards__title">Recall</h3>
               <p class="cards__description">
                 Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
             </li>
@@ -80,7 +80,7 @@
               alt="Интерливинг"
               src="./images/cards-interliving.png"
             />
-              <h4 class="cards__title">Интерливинг</h4>
+              <h3 class="cards__title">Интерливинг</h3>
               <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
             </li>
             <li class="cards__item">
@@ -89,7 +89,7 @@
               alt="Вопросы"
               src="./images/cards-question.png"
             />
-              <h4 class="cards__title">Вопросы</h4>
+              <h3 class="cards__title">Вопросы</h3>
               <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
             </li>
             <li class="cards__item">
@@ -98,7 +98,7 @@
               alt="Иллюзия компетентности"
               src="./images/cards-competence.png"
             />
-              <h4 class="cards__title">Иллюзия компетентности</h4>
+              <h3 class="cards__title">Иллюзия компетентности</h3>
               <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
             </li>
           </ul>
@@ -107,14 +107,14 @@
           <h2 class="section-title">Видео на TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <ul class="video__iframes">
-            <li><iframe class="video__iframe" height="316" width="515" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-            <li><iframe class="video__iframe"  height="316" width="515" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <li class="video__iframes-item"><iframe class="video__iframe"src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+            <li class="video__iframes-item"><iframe class="video__iframe"src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </li>
             </ul>
         </section>
         <section class="oakley">
           <div class="two-columns">
-            <h6 class="two-columns__brief">История Барбары Оакли.</h6>
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph"> С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
               </p>
@@ -178,9 +178,9 @@
           <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир — школа</h2>
-            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
-            </p>
-            <h6 class="khan__quote-author">Джордж Лукас</h6>
+            <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+            </blockquote>
+            <h3 class="khan__quote-author">Джордж Лукас</h3>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
             <img
@@ -188,7 +188,7 @@
               alt="Обложка книги"
               src="./images/khan-book.jpg"
             />
-            <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
+            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
           </div>
         </section>
@@ -258,26 +258,26 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img
+          <a href="https://arzamas.academy/" title="Проект Арзамас"><img
           class="resources__logo"
           alt="Логотип Арзамаса"
           src="./images/logo/resources-arzamas.svg"
-        />
-        <img
+        /></a>
+        <a href="https://nplus1.ru/" title="Портал N+1"> <img
           class="resources__logo"
-          alt="Логотип Н1"
+          alt="Логотип N+1"
           src="./images/logo/resources-n1.svg"
-        />
-        <img
+        /></a>
+        <a href="https://www.strelka.com/ru/" title="Институт медиа, архитектуры и дизайна «Стрелка»"><img
           class="resources__logo"
           alt="Логотип Стрелки"
           src="./images/logo/resources-strelka.svg"
-        />
-        <img
+        /></a>
+        <a href="https://polka.academy/" title="Образовательный проект «Полка»"> <img
           class="resources__logo"
           alt="Логотип Полки"
           src="./images/logo/resources-polka.svg"
-        />
+        /></a>
         </div>
 
       </section>
