--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <p class="table__text">Открытие кривой забывания</p>
             </li>
             <li class="table__cell">
-              <h6 class="table__heading">1889 год</h6>
+              <h3 class="table__heading">1889 год</h3>
               <p class="table__text">Открытие условного рефлекса</p>
             </li>
           </ul>
@@ -258,22 +258,22 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a href="https://arzamas.academy/" title="Проект Арзамас"><img
+          <a href="https://arzamas.academy/" target="_blank" title="Проект Арзамас"><img
           class="resources__logo"
           alt="Логотип Арзамаса"
           src="./images/logo/resources-arzamas.svg"
         /></a>
-        <a href="https://nplus1.ru/" title="Портал N+1"> <img
+        <a href="https://nplus1.ru/" target="_blank" title="Портал N+1"> <img
           class="resources__logo"
           alt="Логотип N+1"
           src="./images/logo/resources-n1.svg"
         /></a>
-        <a href="https://www.strelka.com/ru/" title="Институт медиа, архитектуры и дизайна «Стрелка»"><img
+        <a href="https://www.strelka.com/ru/" target="_blank" title="Институт медиа, архитектуры и дизайна «Стрелка»"><img
           class="resources__logo"
           alt="Логотип Стрелки"
           src="./images/logo/resources-strelka.svg"
         /></a>
-        <a href="https://polka.academy/" title="Образовательный проект «Полка»"> <img
+        <a href="https://polka.academy/" target="_blank" title="Образовательный проект «Полка»"> <img
           class="resources__logo"
           alt="Логотип Полки"
           src="./images/logo/resources-polka.svg"
